@@ -1,5 +1,7 @@
 1.15 Not Released
 
+ - Add test file t/release-unused-vars.t and remove unused variables.
+
  - Add test file t/release-pod-coverage.t.
 
  - Add test file t/release-whitespaces.t and clean up whitespace.
